	+ fixed wrong usage of getopt_long()
	+ fixed GCC 4.7 compatibility
	+ misc. bug fixes and improvements

r2.8 released 2013-12-09
	+ various performance improvements
	+ better error messages
	+ added debugging messages
	+ fixed mixup of malloc/new[]
	+ fixed wrong usage of getline()

r2.9 released 2014-01-25
	+ added test suite, travis integration
	+ fixed $XDG_DATA_HOME being ignored
	+ fixed wrong ordering of default search paths
	+ support shell aliases

r2.10 released 2014-04-17
	+ minor changes regarding quoting
	+ change to application path if specified as per XDG spec

r2.11 released 2014-04-20
	+ fixed unhidden desktop files being regarded as hidden

r2.12 released 2014-12-14
	+ fixed quoting issue with localized names
	+ fixed CMakeLists for multithreaded builds
	+ fixed overriding files with Hidden and/or NoDisplay keys
	+ whitespace after "=" is now ignored
	+ implemented desktop file ID concept of the XDG specification
	  (supersedes old "override-by-name" semantics)
	+ added support for OnlyShowIn and NotShowIn tags
	+ added --use-xdg-de flag to interpret $XDG_CURRENT_DESKTOP
	  (for OnlyShowIn/NotShowIn)
	+ temporary files are now created with mkstemp

r2.13 released 2015-06-22
	+ GenericName fields are added to the menu, too
	+ Added manpage j4-dmenu-desktop(1)
	+ Menu is now sorted by names

r2.14 released 2016-03-31
	+ Added --usage-log feature to sort by usage frequency
	+ Added --no-generic option to exclude GenericName fields

r2.15 released 2017-03-19
	+ fixed bug where using some shells could use a lot of CPU for nothing
	+ fixed issue when locale setup is completely broken (fall back to "C" locale)
	+ fixed build on FreeBSD

r2.16 released 2018-01-11
	+ updated CMakeLists to use Catch 1.x (instead of 2.x)

r2.17 released 2019-02-26
	+ fixed compilation error on FreeBSD 11
	+ fixed specifying `--no-generic` after `--usage-log=` breaking usage log
	+ improved build speed
	+ added --wait-on feature to daemonize for better responsiveness