@@ -1,5 +1,5 @@
-[submodule "/home/alex/.config/ranger/plugins/ranger_devicons"]
-	path = /home/alex/.config/ranger/plugins/ranger_devicons
+[submodule ".config/ranger/plugins/ranger_devicons"]
+	path = .config/ranger/plugins/ranger_devicons
 	url = https://github.com/alexanderjeurissen/ranger_devicons.git
 [submodule "suckless/dmenu"]
 	path = suckless/dmenu
@@ -7,18 +7,16 @@
 [submodule "suckless/sxiv"]
 	path = suckless/sxiv
 	url = https://github.com/muennich/sxiv.git
-[submodule ".config/https:/github.com/antaxiom/nvim.git"]
-	path = .config/https:/github.com/antaxiom/nvim.git
-	url = /home/alex/.config/nvim
 [submodule ".zsh-plugins/z.lua"]
 	path = .zsh-plugins/z.lua
 	url = https://github.com/skywind3000/z.lua.git
-[submodule "/home/alex/.config/nvim"]
-	path = /home/alex/.config/nvim
+[submodule ".config/nvim"]
+	path = .config/nvim
 	url = https://github.com/antaxiom/nvimrc.git
-[submodule "https:/github.com/antaxiom/nvimrc.git"]
-	path = https:/github.com/antaxiom/nvimrc.git
-	url = /home/alex/.config/nvim
 [submodule ".zsh-plugins/zsh-autocomplete"]
 	path = .zsh-plugins/zsh-autocomplete
 	url = https://github.com/marlonrichert/zsh-autocomplete.git
+[submodule ".zsh-plugins/zsh-syntax-highlighting"]
+	path = .zsh-plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+
