@@ -31,6 +31,8 @@ In this mode no menu will be shown. Instead the program waits for <path>
 to be written to (use echo > path). Every time this happens a menu will be shown.
 Desktop files are parsed ahead of time.
 Perfoming 'echo -n q > path' will exit the program.
+.IP \fB\-\-no\-exec\fR
+Do not execute selected command, send to stdout instead
 .IP \fB\-\-help\fR
 Display this help message
 
