@@ -197,14 +197,14 @@ public:
             this->name = fallback_name;
 
 #ifdef DEBUG
-        fprintf(stderr, "%s\n", this->name.c_str());
+        fprintf(stderr, "%s", this->name.c_str());
 #endif
 
         if(this->generic_name.empty())
             this->generic_name = fallback_generic_name;
 
 #ifdef DEBUG
-        fprintf(stderr, "%s\n", this->generic_name.c_str());
+        fprintf(stderr, " (%s)\n", this->generic_name.c_str());
 #endif
 
         fclose(file);
