@@ -4,6 +4,7 @@
 #include <iterator>
 #include <cstddef>
 #include <stack>
+#include <vector>
 #include <stdexcept>
 #include <dirent.h>
 
@@ -32,38 +33,46 @@ public:
     }
 
     FileFinder& operator++(int) {
-        if(!dir)
+        if(direntries.empty()) {
+            dirent *entry;
             opendir();
-
-        if(done)
-            return *this;
-
-        dirent *entry = readdir(dir);
-        if(!entry) {
+            if(done)
+                return *this;
+            while((entry = readdir(dir))) {
+                if(entry->d_name[0] == '.') {
+                    // Exclude ., .. and hidden files
+                    continue;
+                }
+                direntries.emplace_back(entry);
+            }
             closedir(dir);
             dir = NULL;
-            // If you think of this as a loop then this is a continue
+            std::sort(direntries.begin(), direntries.end(),
+                      [](const _dirent &a, const _dirent &b) {
+                          return  a.d_ino > b.d_ino;
+                      });
             return (*this)++;
-        }
-        if(entry->d_name[0] == '.') {
-            // Exclude ., .. and hidden files
-            return (*this)++;
-        }
 
-        std::string fullpath(curdir + entry->d_name);
-        if(is_directory(fullpath)) {
-            dirstack.push(fullpath + "/");
-            return (*this)++;
-        }
-        if(endswith(fullpath, suffix)) {
-            curpath = fullpath;
+        } else {
+            curpath = curdir + direntries.back().d_name;
+            direntries.pop_back();
+            if(is_directory(curpath)) {
+                dirstack.push(curpath + "/");
+                return (*this)++;
+            }
+            if(!endswith(curpath, suffix)) {
+                return (*this)++;
+            }
             return *this;
         }
-
-        return (*this)++;
     }
 
 private:
+    struct _dirent {
+        _dirent(const dirent *ent) : d_ino(ent->d_ino), d_name(ent->d_name) {}
+        ino_t d_ino;
+        std::string d_name;
+    };
     void opendir() {
         if(dirstack.empty()) {
             done = true;
@@ -75,12 +84,14 @@ private:
         dir = ::opendir(curdir.c_str());
         if(!dir)
             throw std::runtime_error(curdir + ": opendir() failed");
+        direntries.clear();
     }
 
     bool done;
 
     DIR *dir;
     std::stack<std::string> dirstack;
+    std::vector<_dirent> direntries;
 
     const std::string suffix;
     std::string curpath;
