@@ -5,7 +5,6 @@
 #include <getopt.h>
 #include <vector>
 #include <algorithm>
-#include <locale>
 
 #include <sys/types.h>
 #include <sys/stat.h>
@@ -61,11 +60,10 @@ public:
             iteration_order.emplace_back(app.first, app.second);
         }
 
-        std::locale locale(suffixes.locale.c_str());
-        std::sort(iteration_order.begin(), iteration_order.end(), [locale](
+        std::sort(iteration_order.begin(), iteration_order.end(), [](
             const std::pair<std::string, const Application *> &s1,
             const std::pair<std::string, const Application *> &s2) {
-                return locale(s1.second->name, s2.second->name);
+                return s1.second->name < s2.second->name;
         });
 
         if(usage_log) {
@@ -108,12 +106,16 @@ private:
                 "    --usage-log=<file>\n"
                 "\tMust point to a read-writeable file (will create if not exists).\n"
                 "\tIn this mode entries are sorted by usage frequency.\n"
+				"    --wrapper=<wrapper>\n"
+				"\tA wrapper binary. Useful in case you want to wrap into 'i3 exec'\n"
                 "    --wait-on=<path>\n"
                 "\tMust point to a path where a file can be created.\n"
                 "\tIn this mode no menu will be shown. Instead the program waits for <path>\n"
                 "\tto be written to (use echo > path). Every time this happens a menu will be shown.\n"
                 "\tDesktop files are parsed ahead of time.\n"
                 "\tPerfoming 'echo -n q > path' will exit the program.\n"
+                "    --no-exec\n"
+                "\tDo not execute selected command, send to stdout instead\n"
                 "    --help\n"
                 "\tDisplay this help message\n"
                );
@@ -133,6 +135,8 @@ private:
                 {"no-generic", no_argument,     0,  'n'},
                 {"usage-log", required_argument,0,  'l'},
                 {"wait-on", required_argument,  0,  'w'},
+                {"no-exec", no_argument,        0,  'e'},
+                {"wrapper", required_argument,   0,  'W'},
                 {0,         0,                  0,  0}
             };
 
@@ -164,6 +168,12 @@ private:
                 break;
             case 'w':
                 wait_on = optarg;
+                break;
+            case 'e':
+                no_exec = true;
+                break;
+            case 'W':
+                this->wrapper = optarg;
                 break;
             default:
                 exit(1);
@@ -243,11 +253,16 @@ private:
         }
 
         this->dmenu->display();
-
         std::string command = get_command();
+        if (this->wrapper.length())
+            command = this->wrapper+" \""+command+"\"";
         delete this->dmenu;
 
         if(!command.empty()) {
+            if (no_exec) {
+                printf("%s\n", command.c_str());
+                return 0;
+            }
             static const char *shell = 0;
             if((shell = getenv("SHELL")) == 0)
                 shell = "/bin/sh";
@@ -300,7 +315,7 @@ private:
         std::string args;
         Application *app;
 
-        printf("Read %d .desktop files, found %lu apps.\n", parsed_files, apps.size());
+        fprintf(stderr, "Read %d .desktop files, found %lu apps.\n", parsed_files, apps.size());
 
         choice = dmenu->read_choice(); // Blocks
         if(choice.empty())
@@ -309,6 +324,9 @@ private:
         fprintf(stderr, "User input is: %s %s\n", choice.c_str(), args.c_str());
 
         std::tie(app, args) = apps.search(choice);
+        if (!app) {
+            return args;
+        }
 
         if(usage_log) {
             apps.update_log(usage_log, app);
@@ -327,11 +345,13 @@ private:
 private:
     std::string dmenu_command;
     std::string terminal;
+	std::string wrapper;
     const char *wait_on = 0;
 
     stringlist_t environment;
     bool use_xdg_de = false;
     bool exclude_generic = false;
+    bool no_exec = false;
 
     Dmenu *dmenu = 0;
     SearchPath search_path;
